--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>Você decide o futuro da nossa geração
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="caixa-principal">
     <h1>Voçê decide o futuro da nossa geração-Agrotóxico</h1>
+    <div class="tela-inicial">
+        <p>Você receberá uma sequéncia de perguntas e respostas , e ao final, serão apresentadasas possíveis consequéncias de suas escolhas. </p>
+        <button class="iniciar-botão">vamos lá</button>
+    </div>
+    <div class="caixa-perguntas"></div>
+    <div class="caixa-alternativas"></div>
+    <div class="caixa-resultados">
+        
+    </div>
 </body>
+</div>
 </html>
