--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
     </div>
     <div class="caixa-perguntas"></div>
     <div class="caixa-alternativas"></div>
-    <div class="caixa-resultados">
-        
-    </div>
-</body>
+  <p class="texto-resultado"></p>
+  <button class="novamente-botao">Jogar novamente</button>
+  </div>
 </div>
+<script type="module" src="java/script.js"></script>
+<script type="module" src="java/aleatorio.js"></script>
+<script type="module" src="java/perguntas.js"></script>
+</body>
 </html>
+
+
+
+
